asciinema-app.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: asciinema-app
  namespace: asciinema
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: asciinema-app
    spec:
      containers:
        - name: phoenix
          image: "asciinema/asciinema-server:latest"
          command: ['sh', '-c', '. /meta/env ; mix phx.server']
          volumeMounts:
          - name: uploads
            mountPath: /app/uploads
          - name: web-tmp
            mountPath: /tmp
          - name: env-dir
            mountPath: /meta
        - name: rails
          image: "asciinema/asciinema-server:latest"
          command: ['sh', '-c', '. /meta/env ; bundle exec unicorn -c config/unicorn.rb']
          volumeMounts:
          - name: uploads
            mountPath: /app/uploads
          - name: web-tmp
            mountPath: /tmp
          - name: log
            mountPath: /app/log
          - name: rails-tmp
            mountPath: /app/tmp
          - name: env-dir
            mountPath: /meta
      volumes:
        - name: uploads
          hostPath:
            path: /data/asciinema/asciinema-uploads
        - name: web-tmp
          hostPath:
            path: /data/asciinema/asciinema-tmp
        - name: log
          hostPath:
            path: /data/asciinema/asciinema-log
        - name: rails-tmp
          hostPath:
            path: /data/asciinema/asciinema-rails-tmp
        - name: env-dir
          emptyDir: {}
---
kind: Service
apiVersion: v1
metadata:
  name: phoenix
  namespace: asciinema
spec:
  selector:
    app: asciinema-app
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
---
kind: Service
apiVersion: v1
metadata:
  name: phoenix-exqui
  namespace: asciinema
spec:
  selector:
    app: asciinema-app
  ports:
  - protocol: TCP
    port: 4040
    targetPort: 4040
    nodePort: 30404
  type: NodePort
---
kind: Service
apiVersion: v1
metadata:
  name: rails
  namespace: asciinema
spec:
  selector:
    app: asciinema-app
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
