asciinema-backend.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: asciinema-backend
  namespace: asciinema
spec:
  replicas: 1
  selector:
    matchLabels:
      app: asciinema-backend
  serviceName: "asciinema-backend"
  template:
    metadata:
      labels:
        app: asciinema-backend
    spec:
      containers:
        - name: postgres
          image: "postgres"
          volumeMounts:
          - name: postgres-data
            mountPath: /var/lib/postgresql/data
          ports:
          - containerPort: 5432
            name: postgres
        - name: redis
          image: "redis"
          volumeMounts:
          - name: redis-data
            mountPath: /data
          ports:
          - containerPort: 6379
            name: redis
        - name: smtp
          image: "namshi/smtp"
          ports:
          - containerPort: 25
            name: smtp
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data
#          hostPath:
#            mountPath: /data/asciinema-postgres
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-data
#          hostPath:
#            path: /data/asciinema-redis
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "manual"
      resources:
        requests:
          storage: 1Gi
  - metadata:
      name: redis-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "manual"
      resources:
        requests:
          storage: 1Gi
---
kind: Service
apiVersion: v1
metadata:
  name: postgres
  namespace: asciinema
spec:
  selector:
    app: asciinema-backend
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
---
kind: Service
apiVersion: v1
metadata:
  name: redis
  namespace: asciinema
spec:
  selector:
    app: asciinema-backend
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
---
kind: Service
apiVersion: v1
metadata:
  name: smtp
  namespace: asciinema
spec:
  selector:
    app: asciinema-backend
  ports:
  - protocol: TCP
    port: 25
    targetPort: 25
