traefik.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: asciinema-traefik
  annotations:
    traefik.backend.circuitbreaker: "NetworkErrorRatio() > 0.5"
  namespace: asciinema
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: asciinema-frontend 

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: asciinema-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
  namespace: asciinema
spec:
  rules:
  - host: asciinema.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: asciinema-traefik
          servicePort: http
